--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,8 +1,11 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css?family=Lato:100,400,700');
+
 body {
     background-color: #F6F8FF;
     min-height: 100vh;
+    font-family: Lato, sans-serif !important;
 }
 
 *, *:after, *:before {
